--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Flexbox Wireframe Practice</title>
-  <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/reset.css"> 
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container">
   <header>HEADER</header>
+  <aside class="aside1">Aside</aside>
+  <section class="content">
+    <div class="column">column1</div>
+    <div class="column">column2</div>
+    <div class="column">column3</div>
+  </section>
+<aside class="aside2">aside</aside>
 
-  <main>
-    <section class="articles">
-      <article>ARTICLE</article>
-      <article>ARTICLE</article>
-      <article>ARTICLE</article>
-    </section>
-    <aside>ASIDE</aside>
-  </main>
-
-  <footer>FOOTER</footer>
+  <footer>Footer</footer></div>
+</div>
 </body>
 </html>
