--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 <body>
   <div class="container">
   <header>HEADER</header>
+  <main class="line2">
   <aside class="aside1">Aside</aside>
   <section class="content">
     <div class="column">column1</div>
     <div class="column">column2</div>
     <div class="column">column3</div>
-  </section>
-<aside class="aside2">aside</aside>
-
+  </section></main>
   <footer>Footer</footer></div>
 </div>
 </body>
